SFYouTubeApp/force-app/main/default/objects/VTM_YOUTUBE_SETTINGS__c/VTM_YOUTUBE_SETTINGS__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>VTM Youtube Settings</label>
</CustomObject>