SFYouTubeApp/force-app/main/default/objects/VTM_YOUTUBE_SETTINGS__c/fields/ACTIVITY_URL__c.field-meta.xml
<CustomField>
    <fullName>ACTIVITY_URL__c</fullName>
    <label>ACTIVITY URL</label>
    <type>Url</type>
</CustomField>