SFYouTubeApp/force-app/main/default/objects/VTM_YOUTUBE_SETTINGS__c/fields/API_KEY__c.field-meta.xml
<CustomField>
    <fullName>API_KEY__c</fullName>
    <label>API KEY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>