SFYouTubeApp/force-app/main/default/objects/VTM_YOUTUBE_SETTINGS__c/fields/CHANNEL_URL__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_URL__c</fullName>
    <label>CHANNEL URL</label>
    <type>Url</type>
</CustomField>