SFYouTubeApp/force-app/main/default/objects/VTM_YOUTUBE_SETTINGS__c/fields/COUNTRY_URL__c.field-meta.xml
<CustomField>
    <fullName>COUNTRY_URL__c</fullName>
    <label>COUNTRY URL</label>
    <type>Url</type>
</CustomField>