SFYouTubeApp/force-app/main/default/objects/VTM_YOUTUBE_SETTINGS__c/fields/PLAYLIST_URL__c.field-meta.xml
<CustomField>
    <fullName>PLAYLIST_URL__c</fullName>
    <label>PLAYLIST URL</label>
    <type>Url</type>
</CustomField>