SFYouTubeApp/force-app/main/default/objects/VTM_YOUTUBE_SETTINGS__c/fields/SEARCH_URL__c.field-meta.xml
<CustomField>
    <fullName>SEARCH_URL__c</fullName>
    <label>SEARCH URL</label>
    <type>Url</type>
</CustomField>