SFYouTubeApp/force-app/main/default/objects/VTM_YOUTUBE_SETTINGS__c/fields/VIDEO_CATE_URL__c.field-meta.xml
<CustomField>
    <fullName>VIDEO_CATE_URL__c</fullName>
    <label>VIDEO CATE URL</label>
    <type>Url</type>
</CustomField>